assets/css/menu.css
.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top {
    display: flex;
    align-items: center;
    justify-content: space-around;
    height: 7rem;
    padding: 0 var(--side-margin);
    background-color: #fff;
    box-shadow: 0 2px 6px rgba(0,0,0,.1333333333);
    width: 100%;
    z-index: 10;
    position: fixed;
    transition: height 300ms;
}

.navbar-scrolled {
    height: 4.1176470588rem !important;
    transition: height 300ms;   
}

.navbar-brand img {
    height: 93px;
    user-select: none;}

.navbar-brand   {
    width: 94px;
    height: 100%;
    margin-right: 2rem;
    padding: .4rem 0;
    color: #000;
    display: flex;
}

.nav-item {
    padding: .6rem 1rem;
    border-radius: 4px;
    transition: background-color 150ms;
}
#navbar-item:hover {
    background-color: var(--item-background, rgba(0,97,155,1));
    color: #fff;  
    transition: all 0.1s ease-in-out 0s;
}
#navbar-item {
    color: #000000;
    font-size: 1.2rem;
    font-weight: bold   ;
    padding: .6rem 1rem;
    border-radius: 4px;
    transition: background-color 150ms;
}

